--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
@@ -199,6 +200,72 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="ftco-section" id="resume-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
+					<h2 class="mb-4">Resume</h2>
+				</div>
+			</div>
+			<div class="row justify-content-center heading-section ftco-animate mb-5">
+				<span class="subheading">experience</span>
+			</div>
+			<div class="row">
+
+				<div class="col-md-4 col-lg-4 col-sm-12">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Full Stack Developer</h3>
+							<p><a href="https://www.alten.it/">Alten Italia</a> | 01 Nov. 2021 - Present</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-4 col-lg-4 col-sm-12">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-branding"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Software Developer</h3>
+							<p><a href="http://www.axcentcompany.it/">Axcent</a> | 16 Jun. 2021 - 31 Oct 2021</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-4 col-lg-4 col-sm-12">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Software & IoT Developer</h3>
+							<p><a href="http://www.cshark.it/">Cshark</a> | 01 Sep. 2020 - 31 Mag. 2021</p>
+						</div>
+					</div> 
+				</div>
+			</div>
+			<div class="row justify-content-center heading-section ftco-animate mb-5">
+				<span class="subheading">education</span>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-lg-6 col-sm-12">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-computer"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">IFTS Specialization Software Developer Industry 4.0</h3>
+							<p>CFP Galdus | 01 Nov. 2019 - 25 Oct. 2020</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-6 col-lg-6 col-sm-12">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Secondary School Diploma in IT</h3>
+							<p>High School "A. Cesaris" | Sep. 2014 - Jul. 2019.</p>
+						</div>
+					</div> 
 				</div>
 			</div>
 		</div>
@@ -500,7 +567,7 @@
 					<div class="w-100 py-4">
 						<h2>Have a project on your mind.</h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly.</p>
-						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
+						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
