--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<div class="text">
 								<span class="subheading">Hello! This is Gionata</span>
 								<h1 class="mb-4 mt-3"> <span>Full Stack</span> Developer</h1>
-								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="files/GionataGaravaniCV_EN.pdf" class="btn btn-primary btn-outline-primary" download="Gionata-Garavani-CV">Download CV</a></p>
 							</div>
 						</div>
 					</div>
@@ -197,6 +197,33 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="ftco-counter img bg-light" id="section-counter">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
+					<div class="block-18 d-flex">
+						<div class="icon d-flex justify-content-center align-items-center">
+							<span class="fa fa-github"></span>
+						</div>
+						<div class="text" style="margin: auto;">
+							<a href="https://github.com/gionatagaravani/"><h4>GitHub</h4></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
+					<div class="block-18 d-flex">
+						<div class="icon d-flex justify-content-center align-items-center">
+							<span class="fa fa-linkedin"></span>
+						</div>
+						<div class="text" style="margin: auto;">
+							<a href="https://linkedin.com/in/gionatagaravani2000/"><h4>LinkedIn</h4></a>
 						</div>
 					</div>
 				</div>
