--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Gionata Garavani - Full Stack Developer</title>
+	<link href="images/ggicon.ico" rel="icon">
 	<meta name="google-site-verification" content="aoxvHnjQGLK1ZgPxVeHNrzYD7oTyLaM3D_DEFTNfkyc" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
