--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 				<div class="col-md-8 col-lg-8 d-flex align-items-center">
 					<div class="w-100 py-4">
 						<h2>Do you have any projects in your mind?</h2>
-						<p>Do not esitate to contact me.</p>
+						<p>Do not esitate to contact me. | yes, this image is made by AI :)</p>
 						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
